- meklort : Update laoder.h to latest, declare gMI global, Load modules passed in via the multiboot header / first bootloader,
		Fix mboot.h include, Add ?log command to print out bdmesg without needing Wait=y, Add slightly more debugging for modules.
- ErmaC : Rename CPU_MODEL_xxx into CPUID_MODEL_xxx follow Apple source name
- ErmaC : Rename decompress_lzvn function to lzvn_decode follow Apple source name.
- ErmaC : Add more chameleon UI stuff (default) made by blackosx
- ErmaC : Rollback changes for msdos.c (2327) thx to bltz
- ErmaC : Split out states generator from acpi_patcher (Credits to Clover Teams)
- ErmaC : Merged proposed patch by N3 (Boot from vanilla Recovery HD, Installation DMG)
- bitshoveler : Make 'buffer' arg to aml_add_buffer 'const char *', was just 'char *' (aml_generator)
- bitshoveler : Fix "sed: RE error: illegal byte sequence", which turns out to be from feeding sed a TIFF file (buildpkg.sh)
- bitshoveler : Remove "-x" option from "ld" command which breaks build under newer Xcode versions (MakeInc.dir)
- bitshoveler : CacheInit(), CacheRead() prototypes: use u_int32_t instead of long where appropriate (saio_internal.h)
- bitshoveler : Improved defensiveness against malloc failure (disk.c)
- bitshoveler : Use u_int32_t instead of long where appropriate (cache.c)
- bitshoveler : Make some constant arrays static; other minor fixes (acpi_patcher.c)
- bitshoveler : Various fixes to problems exposed by Clang static analyzer (picopng.c)
- bitshoveler : Remove "-x" option from "ld" command which breaks build under newer Xcode versions (/i386/modules/MakeInc.dir) 
- bitshoveler : Comment out some unused functions by expanding "#if UNUSED" conditional (stringTable.c)
- bitshoveler : Comment out unused static functions, which cause build to fail in "release" mode (vbe.c)
- bitshoveler : Fix null pointer handling (nvidia.c)
- bitshoveler : Only write terminating null char if malloc succeeded (strndup.c)
- bitshoveler : Fix memory leak (bdmesg.c)